fixed alignment

--- a/style/vars.scss
+++ b/style/vars.scss
@@ -1,3 +1,4 @@
-$bar-size: 48px;
+$bar-size: 42px;
 $bg: $base00;
+$bg2: $base01;
 $fg: $base06;
